# World-Take-Home-Income-Calculator

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: deploy.yml
backend/: .env.example  main.py  pyproject.toml
backend/prompts/: salary_extract.j2  salary_llm_estimate.j2  tax_calculate.j2
backend/services/: llm.py  salary.py  tax.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CurrencyConverter.jsx  InputForm.jsx  ProgressTracker.jsx  ResultsDisplay.jsx  StepOutput.jsx
