[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
